css/style.css
/* ... */
@media only screen and (max-width: 976px) {
    .story_modal .section .title_bg {
        min-width: 50px;
    }
}

@media only screen and (max-width: 768px) {
    .story_modal .section .title_bg {
        display: none;
    }
}

.story_modal.taipower .section01 .title_bg {
    background: no-repeat center top/110% url('../img/client_1.png');
}

.story_modal.taipower .section02 .title_bg {
    background: no-repeat left top/110% url('../img/client_2.png');
}

.story_modal.taipower .section03 .title_bg {
    background: no-repeat left top/110% url('../img/client_3.png');
}

.story_modal.mitac .section01 .title_bg {
    background: no-repeat left top/110% url('../img/client_4.png');
}

.story_modal.mitac .section02 .title_bg {
    background: no-repeat center top/110% url('../img/client_5.png');
}

.story_modal.innodisk .section01 .title_bg {
    background: no-repeat center top/110% url('../img/client_6.png');
}

.story_modal.innodisk .section02 .title_bg {
    background: no-repeat left top/110% url('../img/client_7.png');
}

@media only screen and (max-width: 1200px) {
    .story_modal .section .title_bg .title_container {
        display: none;
    }
}

.story_modal .section .title_bg .title_container.black, 
.story_modal .section .title_bg .title_container.black p {
    color: #000;
}

.story_modal .section .title_bg .title_container h1 {
    letter-spacing: 6px;
    font: 28px "Noto Sans TC";
}

.story_modal .section .title_bg .title_container h3 {
    font: 16px "Noto Sans TC Light";
    margin: 10px 0 15px;
}

.story_modal .section .title_bg .title_container p {
    font: 10px "Noto Sans TC Light";
    margin-top: 30px;
    color: #fff;
}

.story_modal .deco_line {
    width: 90px;
    height: 8px;
    background-color: #fff;
}

.story_modal.innodisk .section02 .deco_line {
    background-color: #000;
}

.story_modal .section .content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.story_modal .section .content h1, 
.story_modal .section .content p, 
.story_modal .section .content ul {
    color: #222222;
    letter-spacing: 1px;
}

.story_modal .section .content .content_wrapper {
    margin: 30px 40px 0 80px;
}

@media only screen and (max-width: 900px) {
    .story_modal .section .content .content_wrapper {
        margin: 30px;
    }
}

.story_modal .section .content .content_wrapper .title_logo {
    display: flex;
    align-items: self-start; 
}

@media only screen and (max-width: 900px) {
    .story_modal .section .content .content_wrapper .title_logo {
        flex-direction: column;
    }
}

.story_modal .section .content .content_wrapper .title_logo .logo_wrapper {
    width: 80px;
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.story_modal .section .content .content_wrapper .title_logo .title {
    margin: 0 0 10px 30px;
}

@media only screen and (max-width: 900px) {
    .story_modal .section .content .content_wrapper .title_logo .title {
        margin-left: 10px;
        margin-top: 10px;
    }
}


.story_modal .section .content .content_wrapper .title_logo .title h1 {
    letter-spacing: 1px;
    font: 30px/1.5 "Noto Sans TC Light";
}

@media only screen and (max-width: 900px) {
    .story_modal .section .content .content_wrapper .title_logo .title h1 {
        font-size: 24px;
    }
}

.story_modal .section .content .content_wrapper .title_logo .title .blue {
    margin: 20px 5px;
    background-color: #364d62;
}

.story_modal .section .content .content_wrapper .text_container {
    margin-left: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;    
    letter-spacing: 0.1px;
}

@media only screen and (max-width: 900px) {
    .story_modal .section .content .content_wrapper .text_container {
        margin-left: 20px;
    }
}

.story_modal .section .content .content_wrapper .text_container .bold {
    font-weight: bold;
}

.story_modal .section .content .content_wrapper .text_container .empha_wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.story_modal .section .content .content_wrapper .text_container .empha_wrapper .empha_text {
    text-align: center;
    line-height: 1.5;
    font-size: 15px;
    position: relative;
    padding-left: 5px;
}

@media only screen and (max-width: 900px) {
    .story_modal .section .content .content_wrapper .text_container .empha_wrapper .empha_text {
        font-size: 14px;
    }
}

.story_modal .section .content .content_wrapper .text_container .empha_wrapper .empha_text::before {
    content: '';
    background: no-repeat center/70% url('../img/client_deco_01.png');
    width: 80px;
    height: 60px;
    position: absolute;
    top: -30px;
    left: -25px;
    z-index: -1;
}

.story_modal .section .content .content_wrapper .text_container .empha_wrapper .empha_text::after {
    content: '';
    background: no-repeat center/70% url('../img/client_deco_02.png');
    width: 80px;
    height: 60px;
    position: absolute;
    bottom: 20px;
    right: -18px;
    z-index: -1;
}

.story_modal .section .content .content_wrapper .text_container .empha_wrapper .source {
    font: italic 15px/1.6 "Noto Sans TC Light";
    margin-top: 5px;
}

@media only screen and (max-width: 900px) {
    .story_modal .section .content .content_wrapper .text_container .empha_wrapper .source {
        font-size: 14px;
    }
}

.story_modal .section .content .content_wrapper .text_container .text {
    font: 15px/1.6 "Noto Sans TC Light";
    padding-left: 10px;
    margin-top: 30px;
}

.story_modal .section .content .content_wrapper .text_container div.text {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.story_modal .section .content .content_wrapper .text_container .text .source {
    font: italic 15px/1.6 "Noto Sans TC Light";
    margin-top: 5px;
    text-align: right;
}
/* ... */

